--- a/news.html
+++ b/news.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=	, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Game Shop</title>
-	<link rel="stylesheet" type="text/css" href="styly.css	">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -18,68 +18,147 @@
 			<a href="contacts.html">Контакти</a>
 			<a href="basket.html">Корзина</a>
 		</nav>
+
 		</header>
-		<main>
+
+		<main id="news_page_main">
+
+			<h2> Новости Игр </h2>
+		<div class="news_item">
+			<img src="https://i1.sndcdn.com/artworks-000050879399-2hu9ry-t500x500.jpg" alt="World of Tanks">
+
+			<h3>Новий режим в world of tanks</h3>
+
+		<p>	
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, aliquid accusamus quidem repellat! Deserunt eveniet dolore qui unde, autem, quibusdam.
+		</p>
+
+			<a href="#">(Жми сюда)</a>
+		</div>
+
+
+
+		<div class="news_item">
+			<img src="https://i1.sndcdn.com/artworks-000050879399-2hu9ry-t500x500.jpg" alt="World of Tanks">
+
+			<h3>Новий режим в world of tanks</h3>
+
+		<p>	
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, aliquid accusamus quidem repellat! Deserunt eveniet dolore qui unde, autem, quibusdam.
+		</p>
+
+			<a href="#">(Жми сюда)</a>
+		</div>
+
+
+<div class="news_item">
+			<img src="https://i1.sndcdn.com/artworks-000050879399-2hu9ry-t500x500.jpg" alt="World of Tanks">
+
+			<h3>Новий режим в world of tanks</h3>
+
+		<p>	
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, aliquid accusamus quidem repellat! Deserunt eveniet dolore qui unde, autem, quibusdam.
+		</p>
+
+			<a href="#">(Жми сюда)</a>
+		</div>
+
+
+<div class="news_item">
+			<img src="https://i1.sndcdn.com/artworks-000050879399-2hu9ry-t500x500.jpg" alt="World of Tanks">
+
+			<h3>Новий режим в world of tanks</h3>
+
+		<p>	
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, aliquid accusamus quidem repellat! Deserunt eveniet dolore qui unde, autem, quibusdam.
+		</p>
+
+			<a href="#">(Жми сюда)</a>
+		</div>
+
+
+<div class="news_item">
+			<img src="https://i1.sndcdn.com/artworks-000050879399-2hu9ry-t500x500.jpg" alt="World of Tanks">
+
+			<h3>Новий режим в world of tanks</h3>
+
+		<p>	
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, aliquid accusamus quidem repellat! Deserunt eveniet dolore qui unde, autem, quibusdam.
+		</p>
+
+			<a href="#">(Жми сюда)</a>
+		</div>
+
+	<div class="news_item">
+			<img src="https://i1.sndcdn.com/artworks-000050879399-2hu9ry-t500x500.jpg" alt="World of Tanks">
+
+			<h3>Новий режим в world of tanks</h3>
+
+		<p>	
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, aliquid accusamus quidem repellat! Deserunt eveniet dolore qui unde, autem, quibusdam.
+		</p>
+
+			<a href="#">(Жми сюда)</a>
+		</div>
+
+
+
+		<div class="news_item">
+			<img src="https://i1.sndcdn.com/artworks-000050879399-2hu9ry-t500x500.jpg" alt="World of Tanks">
+
+			<h3>Новий режим в world of tanks</h3>
+
+		<p>	
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, aliquid accusamus quidem repellat! Deserunt eveniet dolore qui unde, autem, quibusdam.
+		</p>
+
+			<a href="#">(Жми сюда)</a>
+		</div>
+
+
+<div class="news_item">
+			<img src="https://i1.sndcdn.com/artworks-000050879399-2hu9ry-t500x500.jpg" alt="World of Tanks">
+
+			<h3>Новий режим в world of tanks</h3>
+
+		<p>	
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, aliquid accusamus quidem repellat! Deserunt eveniet dolore qui unde, autem, quibusdam.
+		</p>
+
+			<a href="#">(Жми сюда)</a>
+		</div>
+
+
+<div class="news_item">
+			<img src="https://i1.sndcdn.com/artworks-000050879399-2hu9ry-t500x500.jpg" alt="World of Tanks">
+
+			<h3>Новий режим в world of tanks</h3>
+
+		<p>	
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, aliquid accusamus quidem repellat! Deserunt eveniet dolore qui unde, autem, quibusdam.
+		</p>
+
+			<a href="#">(Жми сюда)</a>
+		</div>
+
+
+<div class="news_item">
+			<img src="https://i1.sndcdn.com/artworks-000050879399-2hu9ry-t500x500.jpg" alt="World of Tanks">
+
+			<h3>Новий режим в world of tanks</h3>
+
+		<p>	
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, aliquid accusamus quidem repellat! Deserunt eveniet dolore qui unde, autem, quibusdam.
+		</p>
+
+			<a href="#">(Жми сюда)</a>
+		</div>	
+
 			
-			<div class="product_item">	
-
-					<a href="#">
-						<img src="https://myringtone.top/uploads/posts/2019-12/1575796481_world-of-tanks.jpg" alt="World of Tanks">
-					</a>
-			</div>	
-
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="http://worldoftanks.eu/dcont/fb/image/3012_wot_january_sneak_peek_winter_mode.jpg">
-					</a>
-			</div>	
-
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="https://prostoacc.com/image/cache/catalog/icon-goods/wot%20tanks/tank-500x500-500x500.png">
-					</a>
-			</div>	
-
-	<div class="product_item">	
-
-					<a href="#">
-						<img src="https://myringtone.top/uploads/posts/2019-12/1575796481_world-of-tanks.jpg" alt="World of Tanks">
-					</a>
-			</div>	
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="http://worldoftanks.eu/dcont/fb/image/3012_wot_january_sneak_peek_winter_mode.jpg">
-					</a>
-			</div>	
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="https://prostoacc.com/image/cache/catalog/icon-goods/wot%20tanks/tank-500x500-500x500.png" alt="World of Tanks">
-					</a>
-			</div>
-				<div class="product_item">	
-
-					<a href="#">
-						<img src="https://myringtone.top/uploads/posts/2019-12/1575796481_world-of-tanks.jpg" alt="World of Tanks">
-					</a>
-			</div>	
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="http://worldoftanks.eu/dcont/fb/image/3012_wot_january_sneak_peek_winter_mode.jpg">
-					</a>
-			</div>	
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="https://prostoacc.com/image/cache/catalog/icon-goods/wot%20tanks/tank-500x500-500x500.png" alt="World of Tanks">
-					</a>
-			</div>
 		</main>
+
 		<footer>
+
 			<p>	
 					Интернет-магазин комп'терних игр в Херсоне. У нас собран весь список топовых игр ,которые обожают игроки по всему миру. Для вас найдуться игри на любой вкус:Фентези, мультиплеер, головоломки, шутери,про будущие. Есть возможность онлайн-оплати  
 			</p>
