--- a/categories.html
+++ b/categories.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=	, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Game Shop</title>
-	<link rel="stylesheet" type="text/css" href="styly.css	">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
