--- a/basket.html
+++ b/basket.html
@@ -18,66 +18,53 @@
 			<a href="contacts.html">Контакти</a>
 			<a class="active_menu_link" href="basket.html">Корзина</a>
 		</nav>
+
 		</header>
-		<main>
+
+		<main id="basket_page_main">
+			<h2>Ваши покупки</h2>
+			<div class="basket_item">
+				<img src="https://prostoacc.com/image/cache/catalog/icon-goods/wot%20tanks/tank-500x500-500x500.png" alt="">
+
+				<h3> В корзине </h3>
+
+				<a href="">Убрать</a>
+
+
+			</div>
+
+
+
+			<div class="basket_item">
+				<img src="https://prostoacc.com/image/cache/catalog/icon-goods/wot%20tanks/tank-500x500-500x500.png" alt="">
+
+				<h3> В корзине </h3>
+
+				<a href="">Убрать</a>
+
+
+
+			</div>
+
+
+			<div class="basket_item">
+				<img src="https://prostoacc.com/image/cache/catalog/icon-goods/wot%20tanks/tank-500x500-500x500.png" alt="">
+
+				<h3> В корзине </h3>
+
+				<a href="">Убрать</a>
+
+
+			</div>
 			
-			<div class="product_item">	
-
-					<a href="#">
-						<img src="https://myringtone.top/uploads/posts/2019-12/1575796481_world-of-tanks.jpg" alt="World of Tanks">
-					</a>
-			</div>	
-
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="http://worldoftanks.eu/dcont/fb/image/3012_wot_january_sneak_peek_winter_mode.jpg">
-					</a>
-			</div>	
-
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="https://prostoacc.com/image/cache/catalog/icon-goods/wot%20tanks/tank-500x500-500x500.png">
-					</a>
-			</div>	
-
-	<div class="product_item">	
-
-					<a href="#">
-						<img src="https://myringtone.top/uploads/posts/2019-12/1575796481_world-of-tanks.jpg" alt="World of Tanks">
-					</a>
-			</div>	
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="http://worldoftanks.eu/dcont/fb/image/3012_wot_january_sneak_peek_winter_mode.jpg">
-					</a>
-			</div>	
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="https://prostoacc.com/image/cache/catalog/icon-goods/wot%20tanks/tank-500x500-500x500.png" alt="World of Tanks">
-					</a>
-			</div>
-				<div class="product_item">	
-
-					<a href="#">
-						<img src="https://myringtone.top/uploads/posts/2019-12/1575796481_world-of-tanks.jpg" alt="World of Tanks">
-					</a>
-			</div>	
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="http://worldoftanks.eu/dcont/fb/image/3012_wot_january_sneak_peek_winter_mode.jpg">
-					</a>
-			</div>	
-		<div class="product_item">	
-
-					<a href="#">
-						<img src="https://prostoacc.com/image/cache/catalog/icon-goods/wot%20tanks/tank-500x500-500x500.png" alt="World of Tanks">
-					</a>
-			</div>
+			<body>
+				<p>
+					К Оплате
+				</p>
+			</body>
+	
+			
+		
 		</main>
 		<footer>
 			<p>	
